<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/fruitFullDescription_image"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/apple" />

    <TextView
        android:id="@+id/fruitFullDescription_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/fruitFullDescription_image"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/fruitFullDescription_description"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="30dp"
        android:gravity="center"
        android:text="@string/fruit_description"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/fruitFullDescription_title" />

    <Button
        android:id="@+id/deleteBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        app:layout_constraintStart_toStartOf="@+id/fruitFullDescription_description"
        app:layout_constraintTop_toBottomOf="@+id/fruitFullDescription_description" />

    <Button
        android:id="@+id/editBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="48dp"
        android:text="@string/edit"
        app:layout_constraintEnd_toEndOf="@+id/fruitFullDescription_description"
        app:layout_constraintTop_toBottomOf="@+id/fruitFullDescription_description" />
</androidx.constraintlayout.widget.ConstraintLayout>
